overlays/development/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    app: todonodejs
    name: frontend
spec:
  host: todo.apps.ocp4.example.com
  path: /todo
  to:
    kind: Service
    name: dev-frontend
    weight: 100
